@@ -1322,7 +1322,7 @@ initiation time of individual jobs.
 \fBinterval=#\fR
 The number of seconds between iterations.
 Higher values result in less overhead and responsiveness.
-The default value is 5 seconds on BlueGene systems and 10 seconds otherwise.
+The default value is 30 seconds.
 This option applies only to \fBSchedulerType=sched/backfill\fR.
 .TP
 \fBmax_job_bf=#\fR
